--- a/index.html
+++ b/index.html
@@ -168,7 +168,11 @@
                     </ul>
 
                     <div class="popup__more">
-                      <input id="checkbox__more" class="checkbox__more" type="checkbox" />
+                      <input
+                        id="checkbox__more"
+                        class="checkbox__more"
+                        type="checkbox"
+                      />
                       <label for="checkbox__more">
                         <span class="popup__more-name">More apps</span>
                       </label>
@@ -225,7 +229,7 @@
                               alt="Translation"
                               class="icon"
                             />
-                            <span class="popup__more-name">Translation</span>
+                            <span class="popup__more-name">Translate</span>
                           </a>
                         </li>
 
@@ -257,8 +261,10 @@
                 </a>
               </li>
 
-              <li class="nav__item">
-                <a href="#" class="nav__item-link"> KS </a>
+              <li class="nav__item user-item">
+                <a href="#" class="nav__item-link user">
+                  <img src="./popup-icons/favicon.png" alt="kottan" />
+                </a>
               </li>
             </ul>
           </nav>
